--- a/elastic-cross.tex
+++ b/elastic-cross.tex
@@ -1,22 +1,10 @@
 \begin{figure}
     \centering
-    \begin{subfigure}[b]{0.5\textwidth}
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
-\includegraphics[width=\maxwidth]{figure/robust:cr-elastic:a-1} 
+\includegraphics[width=\maxwidth]{figure/robust:cr-elastic-1} 
 
 \end{knitrout}
-    \caption{Congestion controllers from \S\ref{s:eval}.}\label{fig:robust:cr-elastic:a}
-    \end{subfigure}
-    \begin{subfigure}[b]{0.5\textwidth}
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
-\includegraphics[width=\maxwidth]{figure/robust:cr-elastic:b-1} 
-
-\end{knitrout}
-    \caption{Alternate configuration -- Copa uses Nimbus's elasticity detector.}\label{fig:robust:cr-elastic:b}
-    \end{subfigure}
-
     \caption{Elastic cross traffic. \an{data has results across 1,2,3,4 elastic cross traffic flows. need to re-plot to show this} }
     \label{fig:robust:cr-elastic}
 \end{figure}
