Updates from ShareLaTeX

--- a/intro.tex
+++ b/intro.tex
@@ -6,7 +6,7 @@
 %lots of scheduling algorithms proposed. scheduling used in private wans. seems clearly beneficial.
 The vast literature on scheduling and queue management algorithms~\cite{diffserv, fair-queueing, sfq, pie, CoDel, fifoplus, virtualClocks, csfq, drr, red, ecn} clearly indicates the performance benefits of deploying such schemes within the network. However, the public Internet has, at large, been unable to enjoy these benefits. 
 
-Although router vendors have, over the years, implemented certain schemes (such as strict priorities, round-robin for fair queueing, and dynamic buffer limiting for active queue management~\cite{cisco-qos}), they are often not enabled, or used effectively, by the network operators. 
+Although router vendors have, over the years, implemented certain schemes (such as strict priorities, round-robin for fair queueing, and active queue management~\cite{cisco-qos}), they are often not enabled, or used effectively, by the network operators. 
 %\radhika{edit, more than not being enabled, they cannot be enforced effectively}
 %Meanwhile, in privately operated wide-area networks, operators have used simple scheduling policies in the core to reap significant gains~\cite{b4, bwe, swan}. 
 This is primarily due to the challenging position of operators in the public Internet, where each of their customers may desire diverging, and often incompatible, features. For example, while enabling fair queueing in the routers would benefit short interactive flows competing with bulk transfers, it may penalize flows bundled within a single VPN tunnel by allocating them smaller than their fair share of bandwidth. 
@@ -18,9 +18,9 @@ Thus, due to limited visibility into their customers' traffic, network operators
 An individual customer can, on the other hand, choose appropriate scheduling and AQM policies for the \emph{component flows} within its own traffic as per its own requirements. 
 %; that is, scheduling policy is easier to express at the edge. 
 Examples include traffic over the public Internet between different datacenters, between campuses of an organization, collaborating universities or companies, between large content provider (\eg Netflix) and a network with many clients (e.g., a regional ISP), large-scale data backups from an organization to an external site (\eg Dropbox), and so on. 
-In each of these scenarios the sender has enough information to unilaterally choose a scheduling or queue management policy for its component flows (such as prioritizing flows based on their application types, enforcing fair queuing for a more stable rate allocation, using AQM to achieve a delay target, and so on). However, these policies are effective only when enforced on congested bottleneck links in a flow's path that experience a queue build-up, and such links are often outside the control of the individual customers~\cite{inferring-interdomain-congestion}. 
+In each of these scenarios the sender has enough information to unilaterally choose a scheduling or queue management policy for its component flows (such as prioritizing flows based on their application types, enforcing fair queueing, using AQM to achieve a delay target, and so on). However, these policies are effective only when enforced on congested bottleneck links in a flow's path that experience a queue build-up, and such links are often outside the control of the individual customers~\cite{inferring-interdomain-congestion}. 
 
-So while network operators do not have enough visibility into the traffic to choose the appropriate policy, the customers may not have enough control over the queued-up links in the public network to enforce their desired policies. This paper attempts to resolve this conundrum by simply \emph{moving the queues in the public network to the customer's edge}, such that appropriate scheduling and queue management policies can be effectively enforced. The natural question that arises is, how can the queues be moved? This is the primary focus of our work. 
+So while network operators do not have enough visibility into the traffic to choose an appropriate policy, the customers may not have enough control over the queued-up links in the network to enforce their desired policies. This paper attempts to resolve this conundrum by simply \emph{moving the queues built in the network to the customer's edge}, such that appropriate scheduling and queue management policies can be effectively enforced. The natural question that arises is, how can the queues be moved? This is the primary focus of our work. 
 
 We begin with the observation that component flows of the traffic from a given sender's domain and destined for the same downstream domain, as in the examples mentioned earlier, are likely to share common bottlenecks within the network. By (i) aggregating such component flows into a single \emph{bundle} at the sender's egress, and (ii) controlling the outgoing rate of this bundle at the egress to match its bottleneck rate in the network, we can effectively \emph{move} the queues built by the traffic in the bundle, from within the network to the sender's egress itself. \radhika{is the last sentence too long / hard to understand? suggestions for fixing it?} 
 
@@ -29,7 +29,7 @@ We further note that middleboxes are now prevalent in the Internet architecture~
 We, therefore, propose a new type of middlebox, called a \name, that (1) aggregates the traffic at the customer's egress into appropriate bundles whose component flows share a common receiver domain, (2) does rate control for each bundle to shift the corresponding queues from within the network to itself, and (3) applies scheduling and queue management policies within each bundle as per the customer's requirements. 
 
 %\radhika{add a few lines on \name's high level architecture.} 
- A \name comprises of a pair of middleboxes: a \inbox that sits at the sender's egress and a \outbox that sits at the receiver's ingress. Thus, a bundle is defined as a group of flows that traverse through the same \inbox and \outbox pair. The bulk of \name's functionality resides at the \inbox, which coordinates with the \outbox for (i) classifying the flows into appropriate bundles, and,  (ii) collecting congestion signals, such as the round-trip time, and the rate at which bundled traffic arrives at the \outbox. These signals are used by a standard congestion control algorithm (with certain properties, as described later) that runs at the \inbox and computes appropriate sending rates for each bundle. The computed sending rates are such that the queuing induced by the bundled traffic in the middle of the network is minimized and is incurred at the \inbox instead, while ensuring that the bottleneck links in the network are not under-utilized. 
+ A \name comprises of a pair of middleboxes: a \inbox that sits at the sender's egress and a \outbox that sits at the receiver's ingress. A bundle is, thus, defined as a group of flows traversing through the same \inbox and \outbox pair. The bulk of \name's functionality resides at the \inbox, which coordinates with the \outbox for (i) classifying the flows into appropriate bundles, and,  (ii) collecting congestion signals, such as the round-trip time, and the rate at which traffic arrives at the \outbox. These signals are used by a standard congestion control algorithm (having certain properties, as described later) that runs at the \inbox and computes appropriate sending rates for each bundle. The sending rates are computed such that the queuing induced by the bundled traffic within the network is minimized and is incurred at the \inbox instead, while ensuring that the bottleneck links in the network remain fully utilized. 
  
  We introduce a novel light-weight methodology for the \inbox and \outbox coordination, which does not require any per-flow state (only requiring per-bundle state), and does not require any modifications to the packets traversing the \name boxes. Furthermore, our overall approach only requires introducing the \name boxes at the customer's edges, and requires no changes to the individual end-hosts or to the routers in the public Internet. 
  
