--- a/packages.tex
+++ b/packages.tex
@@ -109,7 +109,7 @@
 \newcommand{\etc}{{etc.}\xspace}
 \newcommand{\ie}{i.e., }
 %
-\newcommand{\an}[1]{{\color{green}\bf AN: {#1}}}
+\newcommand{\an}[1]{{\color{teal}\bf AN: {#1}}}
 \newcommand{\hb}[1]{{\color{brown}\bf HB: {#1}}}
 \newcommand{\ma}[1]{{\color{red}\bf MA: {#1}}}
 \newcommand{\pg}[1]{{\color{blue}\bf PG: {#1}}}
