--- a/graphs/inelastic-cross.Rnw
+++ b/graphs/inelastic-cross.Rnw
@@ -10,7 +10,7 @@ df$Duration <- df$Duration.usec. / 1e6
 df$ofct <- (df$Size / 12e6) + 0.05
 df$Slowdown <- df$Duration / df$ofct
 
-df <- df[df$Alg != "copa_sfq",]
+df <- df[df$Alg != "copa_sfq" & df$Alg != "bbr_sfq",]
 
 ggplot(df, aes(x=Cross, y=Slowdown, fill=Alg)) + 
     geom_boxplot(outlier.shape=NA) + 
@@ -18,8 +18,8 @@ ggplot(df, aes(x=Cross, y=Slowdown, fill=Alg)) +
     ylab("Slowdown") +
     xlab(NULL) +
     scale_fill_brewer(type="qual", palette=1,
-        limit=c("nimcopa_sfq", "nimbus_sfq", "bbr_sfq", "nobundler_fifo"),
-        labels=c("nimcopa_sfq" = "Bundler (Copa) ", "nimbus_sfq" = "Bundler (Nimbus) ", "bbr_sfq" = "Bundler (BBR) ", "nobundler_fifo" = "Baseline"),
+        limit=c("nimbus_sfq", "nimcopa_sfq", "nobundler_fifo"),
+        labels=c("nimbus_sfq" = "Bundler \n Nimbus ", "nimcopa_sfq" = "Bundler \n Copa ", "nobundler_fifo" = "Baseline"),
     ) +
     theme_minimal() +
     theme(
