--- a/elastic-cross.tex
+++ b/elastic-cross.tex
@@ -5,6 +5,6 @@
 \includegraphics[width=\maxwidth]{figure/robust:cr-elastic-1} 
 
 \end{knitrout}
-    \caption{Elastic cross traffic. \an{data has results across 1,2,3,4 elastic cross traffic flows. need to re-plot to show this} }
+    \caption{Elastic cross traffic. \an{explain this result??}}
     \label{fig:robust:cr-elastic}
 \end{figure}
