--- a/fifo-not-enough.tex
+++ b/fifo-not-enough.tex
@@ -5,6 +5,6 @@
 \includegraphics[width=\maxwidth]{figure/eval:fifo-1} 
 
 \end{knitrout}
-    \caption{With FIFO scheduling, the benefits of \name are lost: FCTs become 18\% worse.}
+    \caption{With FIFO scheduling, the benefits of \name are lost: FCTs are 18\% worse in the median.}
     \label{fig:eval:fifo}
 \end{figure}
