--- a/graphs/lowdelays.Rnw
+++ b/graphs/lowdelays.Rnw
@@ -12,26 +12,21 @@ ggplot(df, aes(x=rtt, colour=alg)) +
     stat_ecdf() +
     scale_x_continuous(
         name="Queueing Delay (ms)") +
-    coord_cartesian(xlim=c(0,250)) +
+    coord_cartesian(xlim=c(0,200)) +
 #    scale_linetype_manual(
 #        limit=c("copa_sfq", "copa_fifo", "copa_fqcodel", "nobundler_fifo"),
 #        labels=c(
-#            "copa_sfq" = "Bundler (SFQ)", 
-#            "copa_fifo" = "Bundler (FIFO)", 
 #            "copa_fqcodel" = "Bundler (FQ-CoDel)", 
 #            "nobundler_fifo" = "Baseline"
 #        ),
 #        values=c(
-#            "copa_sfq" = "dotdash", 
-#            "copa_fifo" = "longdash", 
 #            "copa_fqcodel" = "dotted", 
 #            "nobundler_fifo" = "twodash"
 #        )
 #    ) +
    scale_colour_brewer(type="qual", palette=2,
+       limit=c("copa_fqcodel", "nobundler_fifo"),
        labels=c(
-           "copa_sfq" = "Bundler (SFQ)", 
-           "copa_fifo" = "Bundler (FIFO)", 
            "copa_fqcodel" = "Bundler (FQ-CoDel)", 
            "nobundler_fifo" = "Baseline"
        ),
