--- a/graphs/overview-benefits.Rnw
+++ b/graphs/overview-benefits.Rnw
@@ -5,19 +5,25 @@ library(ggplot2)
 library(showtext)
 font_add_google("Lato")
 showtext_auto()
+library(patchwork)
+
 df <- read.csv("84Mbps-1bk-caidacdf.data", sep=" ")
 df$Duration <- df$Duration.usec. / 1e6
 bw <- 12e6
 df$ofct <- (df$Size / bw) + 0.05
-df$NormFct <- df$Duration / df$ofct
+df$Slowdown <- df$Duration / df$ofct
 
-ggplot(df, aes(
-        x=Alg, fill=Alg, y=NormFct
+big <- df[df$Size > 1e6,]
+med <- df[df$Size <= 1e6 & df$Size > 1e4,]
+small <- df[df$Size <= 1e4,]
+
+ggplot(small, aes(
+        x=Alg, fill=Alg, y=Slowdown
     )) +
     geom_boxplot(show.legend=FALSE,outlier.shape=NA) +
-    coord_cartesian(ylim=c(1, 3)) +
     ylab("Slowdown") +
-   scale_fill_brewer(type="qual", palette=2) +
+    ggtitle("< 10KB") +
+    scale_fill_brewer(type="qual", palette=2) +
     scale_x_discrete(
         limit=c("nobundler_fifo", "copa_sfq", "nobundler_sfq"),
         labels=c(
@@ -27,9 +33,62 @@ ggplot(df, aes(
         ),
         scale_name=NULL, name=NULL,
     ) +
+    coord_cartesian(ylim=c(1,4)) +
     theme_minimal() + 
-    theme(text = element_text(size=18, family="Lato", face="bold"))
+    theme(
+        legend.position="top",
+        legend.title=element_blank(),
+        text = element_text(angle=30,size=18, family="Lato", face="bold"),
+        plot.title = element_text(angle=0,size=18, family="Lato", face="bold", hjust = 0.5)
+    ) +
+ggplot(med, aes(
+        x=Alg, fill=Alg, y=Slowdown
+    )) +
+    geom_boxplot(show.legend=FALSE,outlier.shape=NA) +
+    ylab(NULL) +
+    ggtitle("> 10KB") +
+    scale_fill_brewer(type="qual", palette=2) +
+    scale_x_discrete(
+        limit=c("nobundler_fifo", "copa_sfq", "nobundler_sfq"),
+        labels=c(
+            "nobundler_fifo" = "Baseline",
+            "copa_sfq" = "Bundler", 
+            "nobundler_sfq" = "Optimal"
+        ),
+        scale_name=NULL, name=NULL,
+    ) +
+    coord_cartesian(ylim=c(1,5)) +
+    theme_minimal() + 
+    theme(
+        legend.position="top",
+        legend.title=element_blank(),
+        text = element_text(angle=30,size=18, family="Lato", face="bold"),
+        plot.title = element_text(angle=0,size=18, family="Lato", face="bold", hjust = 0.5)
+    ) +
+ggplot(big, aes(
+        x=Alg, fill=Alg, y=Slowdown
+    )) +
+    geom_boxplot(show.legend=FALSE,outlier.shape=NA) +
+    ylab(NULL) + ggtitle("> 1MB") +
+    scale_fill_brewer(type="qual", palette=2) +
+    scale_x_discrete(
+        limit=c("nobundler_fifo", "copa_sfq", "nobundler_sfq"),
+        labels=c(
+            "nobundler_fifo" = "Baseline",
+            "copa_sfq" = "Bundler", 
+            "nobundler_sfq" = "Optimal"
+        ),
+        scale_name=NULL, name=NULL,
+    ) +
+    coord_cartesian(ylim=c(1,15)) +
+    theme_minimal() + 
+    theme(
+        legend.position="top",
+        legend.title=element_blank(),
+        text = element_text(angle=30,size=18, family="Lato", face="bold"),
+        plot.title = element_text(angle=0,size=18, family="Lato", face="bold", hjust = 0.5)
+    )
 @
-    \caption{\name achieves $33$\% lower median slowdown. \an{Whiskers currently show 1.25 inter-quantile range, figure out how to show 99th \%ile? Also, can barely see Bundler and Optimal...}}
+    \caption{\name achieves $33$\% lower median slowdown. Note the differing axis scales. For both \name and Optimal, performance benefits come from preventing short flows from queueing behind long ones. \an{Whiskers currently show 1.25 inter-quantile range, figure out how to show 99th \%ile? Also, can barely see Bundler and Optimal...}}
     \label{fig:eval:best}
 \end{figure}
