--- a/graphs/twobundler.Rnw
+++ b/graphs/twobundler.Rnw
@@ -13,7 +13,7 @@ df$Bundle <- as.factor(df$BundleId)
 df <- df[df$Alg == "copa_sfq" | df$Alg == "nobundler_fifo",]
 
 ggplot(df, aes(x=Bundle, y=Slowdown, fill=Alg)) +
-    geom_boxplot() +
+    geom_boxplot(outlier.shape=NA) +
     scale_x_discrete(
         limit=c("0", "1"),
         labels=c(
@@ -30,7 +30,7 @@ ggplot(df, aes(x=Bundle, y=Slowdown, fill=Alg)) +
         ),
     ) +
     ylab("Slowdown") +
-    coord_cartesian(ylim=c(1,5)) +
+    coord_cartesian(ylim=c(1,4)) +
     theme_minimal() +
     theme(
         legend.position="top",
